# ComfyUI-FunPack

./: CHANGELOG.md  README.md  WanVideo PRO (StoryMem ver.).json  __init__.py  conditioning.py  context_transition.py  funpack.py  ltx_enhancements.py  model_management.py  pyproject.toml  samplers.py  templates.py
.github/workflows/: publish.yml
docs/: FunPackContextTransitionWindows.md  FunPackGemmaEmbeddingRefiner.md  FunPackHybridEuler2SSampler.md  FunPackLTXAVSceneChainSampler.md  FunPackLoraWorkflow.md  FunPackLorebookEnhancer.md  FunPackSceneBuilder.md  FunPackShotPromptPlanner.md  FunPackStoryWriter.md  FunPackStudio.md  FunPackTemplateManager.md  FunPackVideoRefiner.md  FunPackVideoRefinerV2.md  FunPackVideoRefinerV2QuickGuide.md
example_workflows/: FunPackRefinerV2_LTXV_ExampleWorkflow.json  FunPack_LTX23_SceneBuilder_Advisor_Updated.json  LTXFunPackRefinerV2.json  Wan22_LongVideoGen_StoryMem
tests/: conftest.py  test_scene_builder.py  test_scene_chain_sampler.py  test_v2_category_alignment.py
web/: funpack_conditioning_adjust.js  funpack_lora_weights.js  funpack_refinement_key_loader.js  funpack_scene_builder.js  funpack_studio.js  funpack_template_manager.js
